🐛 FIX: Height is not full on mobile

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -7,10 +7,13 @@
   padding-top: 4rem;
   padding-bottom: 4rem;
   height: -webkit-fill-available;
+  min-height: -webkit-fill-available;
 
   @extend .container;
 
   &.center {
     justify-content: center;
+    padding-top: unset;
+    padding-bottom: unset;
   }
 }
